<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021. Roman P.
  ~ All code is owned by Roman P. APIs are mentioned.
  ~ Last modified: 06.04.21, 21:30
  -->

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/activity_selected_show"
        tools:context=".activities.main.ui.home.SelectedActivity"
        >

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/selected_show_swipe_refresh_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/show_provider_spinner"
            app:layout_constraintBottom_toTopOf="@+id/download_show_button"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

        <GridView
                android:horizontalSpacing="20dp"
                android:verticalSpacing="10dp"
                android:numColumns="3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/show_episode_item_grid"
                android:outlineProvider="paddedBounds"
                />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/selected_show_toolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:src="@tools:sample/avatars"
            android:id="@+id/selected_show_cover_image_view"
            app:layout_constraintTop_toBottomOf="@+id/selected_show_toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:src="@drawable/download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:id="@+id/download_show_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.955"
            app:layout_constraintVertical_bias="0.960"
            android:contentDescription="@string/placeholder_todo"/>

    <TextView
            style="@style/TextViewStyle"
            android:text="@string/show_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/selected_show_title_text_view"
            app:layout_constraintStart_toEndOf="@+id/selected_show_cover_image_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selected_show_toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"/>

    <TextView
            android:text="@string/show_episodes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/selected_show_episode_count_text_view"
            app:layout_constraintStart_toEndOf="@+id/selected_show_cover_image_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"

            app:layout_constraintTop_toBottomOf="@+id/selected_show_id_text_view"
            app:layout_constraintBottom_toBottomOf="@+id/selected_show_cover_image_view"
            app:layout_constraintVertical_bias="0.0"/>

    <TextView
            android:text="@string/show_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/selected_show_id_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/selected_show_cover_image_view"
            app:layout_constraintHorizontal_bias="0.0"

            app:layout_constraintBottom_toBottomOf="@+id/selected_show_cover_image_view"
            app:layout_constraintTop_toBottomOf="@+id/selected_show_title_text_view"
            app:layout_constraintVertical_bias="0.568"/>

    <TextView
            android:text="@string/show_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/selected_show_score_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/selected_show_cover_image_view"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toBottomOf="@+id/selected_show_cover_image_view"
            app:layout_constraintTop_toBottomOf="@+id/selected_show_episode_count_text_view"
            app:layout_constraintVertical_bias="1.0"/>

    <TextView
            android:text="Total size: "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/show_directory_total_size_text_view"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/download_show_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.059"
            app:layout_constraintVertical_bias="0.962"
            app:layout_constraintTop_toTopOf="parent"/>

    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/show_provider_spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/shows_swipe_refresh_layout"
            app:layout_constraintTop_toBottomOf="@+id/selected_show_cover_image_view"
            android:spinnerMode="dropdown"/>
</androidx.constraintlayout.widget.ConstraintLayout>